--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.3.0",
+    "autoprefixer": "^10.2.6",
     "next": "11.0.0",
+    "postcss": "^8.3.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.2"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
